Add more example on array to list